--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "https://klejda59.github.io/restaurant/",
     "name": "restaurant",
     "version": "1.0.0",
     "main": "index.js",
