--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
+        "predeploy":"npm run build",
+        "deploy":"gh-pages -d dist",
         "build": "webpack"
     },
     "author": "",
